--- a/ABOUT.html
+++ b/ABOUT.html
@@ -14,7 +14,7 @@
         </header>
 
         <nav> 
-                <a href="base1.html">HOME</a>
+                <a href="HOME.html">HOME</a>
                 <a href="RESTAURANT.html">RESTAURANT</a>
                 <a href="SERVICES.html">SERVICES</a>
                 <a href="ABOUT.html"class="active">ABOUT</a>
