--- a/HOME.html
+++ b/HOME.html
@@ -15,7 +15,7 @@
         </header>
 
         <nav> 
-                <a href="base1.html" class="active">HOME</a>
+                <a href="HOME.html" class="active">HOME</a>
                 <a href="RESTAURANT.html">RESTAURANT</a>
                 <a href="SERVICES.html">SERVICES</a>
                 <a href="ABOUT.html">ABOUT</a>
