--- a/HOME.html
+++ b/HOME.html
@@ -15,10 +15,10 @@
         </header>
 
         <nav> 
-                <a href="HOME.html" class="active">HOME</a>
-                <a href="RESTAURANT.html">RESTAURANT</a>
+                <a href="ABOUT.html" class="active">ABOUT</a>
+                <a href="HOME.html">HOME</a>
                 <a href="SERVICES.html">SERVICES</a>
-                <a href="ABOUT.html">ABOUT</a>
+                <a href="RESTAURANT.html">RESTAURANT</a>
                 <a href="CONTACT.html">CONTACT</a>
         </nav>
     
