--- a/ABOUT.html
+++ b/ABOUT.html
@@ -43,7 +43,7 @@
             width: 65%;
             right: 15%;
             top: 35%;
-            background-color: rgb(0, 0, 0);
+            background-color: rgba(0, 0, 0, 0.719);
             padding: 30px;
         }
     </style>
@@ -60,10 +60,13 @@
                 </p1>
                 
                 <p2>
-                    <br>Contact info: vsoriano@cougarnet.uh.edu
+                    <br>Contact info: vsoriano@cougarnet.uh.edu<br>
                 </p2>
+
+                <a href="HOME.html">
+                    <br><button style="font-size: 16px; font-family: Arial, Helvetica, sans-serif; background-color: rgba(149, 2, 2, 0.839); color: whitesmoke; border-radius: 7px;"> Explore The Site!</button>
+                </a>
             </div>
-            
         </div>
     </main>
 </div>
