--- a/CONTACT.html
+++ b/CONTACT.html
@@ -14,7 +14,7 @@
         </header>
 
         <nav> 
-            <a href="ABOUT.html">ABOUT</a>
+            <a href="index.html">ABOUT</a>
             <a href="HOME.html">HOME</a>
             <a href="SERVICES.html">SERVICES</a>
             <a href="RESTAURANT.html">RESTAURANT</a>
